# Esterv.Crypto.Vault

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
.github/workflows/: build-docs.yml  build-test-install.yml  clangFormat.yml  codeFormat.yml
examples/: CMakeLists.txt  Simple.cpp  simple.cpp
examples/qml/: Simple.qml  simple.qml
include/: vault.hpp
include/esterv/crypto/: vault.hpp
src/: QVaultCli.cpp  vault.cpp  vaultCli.cpp
